# LawRAG

./: README.md  corpus_hash.txt  pdf2txt.py  pyproject.toml  rag_main.py
backend/: .env.example  bulk_import.py  clean_questions.csv  evaluate_rag.py  excel_to_csv.py  fix_owner.py  requirements.txt  法律维权场景咨询提问库.xlsx
backend/app/: main.py
backend/app/api/: auth.py  chat.py  deps.py  documents.py  kb.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: rag_service.py
backend/data/: README.md
frontend/: .env.development  .env.production  .gitignore  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: request.js
frontend/src/router/: index.js
frontend/src/store/: user.js
frontend/src/views/: Chat.vue  Login.vue
